objects/sfFma__FeatureParameterDate__c.object
<CustomObject>
    <description>Custom object that is part of FMA for storing Feature Parameter Overrides for dates

A new record is created of this object for every feature parameter that is ADDED as part of a package install in an org. This record is automatically created upon every package install.

The Feature Parameter object serves as an index.</description>
    <fields>
        <fullName>sfFma__FeatureParameter__c</fullName>
        <description>The parent Feature Parameter object.</description>
        <label>Feature Parameter</label>
        <referenceTo>sfFma__FeatureParameter__c</referenceTo>
        <relationshipLabel>Feature Parameter Dates</relationshipLabel>
        <relationshipName>Feature_Parameter_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfFma__FullName__c</fullName>
        <description>Name of the Feature Parameter</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__License__c</fullName>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Feature Parameter Dates</relationshipLabel>
        <relationshipName>Feature_Parameter_Dates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfFma__Value__c</fullName>
        <label>Feature Parameter Value</label>
        <type>Date</type>
    </fields>
    <label>Feature Parameter Date</label>
    <nameField>
        <displayFormat>FPD-{0000}</displayFormat>
        <label>Feature Parameter Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Parameter Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sfFma__FullNameUpdatePrevention</fullName>
        <active>true</active>
        <description>Full Name can only be updated by the Feature Management App.</description>
        <errorConditionFormula>AND(ISCHANGED( sfFma__FullName__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__MetricValueUpdatePrevention</fullName>
        <active>true</active>
        <description>&quot;Subscriber To LMO&quot; Feature Parameter Values cannot be manually created or updated.</description>
        <errorConditionFormula>AND(AND(ISPICKVAL(
sfFma__FeatureParameter__r.sfFma__DataFlowDirection__c ,
&quot;Subscriber To LMO&quot;), 
 $User.Id &lt;&gt;   sfFma__FeatureParameter__r.CreatedById ),
 ISCHANGED( sfFma__Value__c ))</errorConditionFormula>
        <errorDisplayField>sfFma__Value__c</errorDisplayField>
        <errorMessage>Subscriber To LMO feature parameter values can only be created or updated by the Feature Management app. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__XSS_Prevention_FullName</fullName>
        <active>true</active>
        <description>Prevent malicious code from being introduced into our text fields.</description>
        <errorConditionFormula>AND(NOT(REGEX(sfFma__FullName__c , &quot;\\w+__\\w+&quot;)),
NOT(ISBLANK( sfFma__FullName__c )))</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>Full Name must be in the format of &lt;namespace&gt;__&lt;developer name&gt;</errorMessage>
    </validationRules>
</CustomObject>